fix validation button on IE 11

--- a/packages/@coorpacademy-components/src/organism/review-slide/style.css
+++ b/packages/@coorpacademy-components/src/organism/review-slide/style.css
@@ -43,9 +43,7 @@
 
 /* ie fallback */
 _:-ms-fullscreen, :root .validateButtonWrapper {
-  width: 100%;
-  left: 40%;
-  right: 40%;
+  width: auto;
 }
 
 .answerContainer {
